k8s/base/grafana-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f /home/ec2-user/petclinic-microservices/k8s/docker-compose.yaml -o /home/ec2-user/petclinic-microservices/k8s/base
    kompose.image-pull-secret: regcred
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: grafana-server
  name: grafana-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: grafana-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f /home/ec2-user/petclinic-microservices/k8s/docker-compose.yaml -o /home/ec2-user/petclinic-microservices/k8s/base
        kompose.image-pull-secret: regcred
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: grafana-server
    spec:
      containers:
        - image: IMAGE_TAG_GRAFANA_SERVICE
          name: grafana-server
          ports:
            - containerPort: 3000
          resources: {}
      # for all other microservices except config-server and discovery-server
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
status: {}
