k8s/base/tracing-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f /home/ec2-user/petclinic-microservices/k8s/docker-compose.yaml -o /home/ec2-user/petclinic-microservices/k8s/base
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: tracing-server
  name: tracing-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: tracing-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f /home/ec2-user/petclinic-microservices/k8s/docker-compose.yaml -o /home/ec2-user/petclinic-microservices/k8s/base
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: tracing-server
    spec:
      containers:
        - env:
            - name: JAVA_OPTS
              value: -XX:+UnlockExperimentalVMOptions -Djava.security.egd=file:/dev/./urandom
          image: openzipkin/zipkin
          name: tracing-server
          ports:
            - containerPort: 9411
          resources: {}
      # for all other microservices except config-server and discovery-server
      restartPolicy: Always
status: {}
