k8s/base/vets-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f /home/ec2-user/petclinic-microservices/k8s/docker-compose.yaml -o /home/ec2-user/petclinic-microservices/k8s/base
    kompose.image-pull-secret: regcred
    kompose.service.expose: petclinic04.farukgunal.net
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: vets-service
  name: vets-service
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: vets-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f /home/ec2-user/petclinic-microservices/k8s/docker-compose.yaml -o /home/ec2-user/petclinic-microservices/k8s/base
        kompose.image-pull-secret: regcred
        kompose.service.expose: petclinic04.farukgunal.net
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: vets-service
    spec:
      containers:
        - image: IMAGE_TAG_VETS_SERVICE
          name: vets-service
          ports:
            - containerPort: 8083
          resources: {}
      # for all other microservices except config-server and discovery-server
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
status: {}
