k8s/base/hystrix-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f /home/ec2-user/petclinic-microservices/k8s/docker-compose.yaml -o /home/ec2-user/petclinic-microservices/k8s/base
    kompose.image-pull-secret: regcred
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: hystrix-dashboard
  name: hystrix-dashboard
spec:
  ports:
    - name: "7979"
      port: 7979
      targetPort: 7979
  selector:
    io.kompose.service: hystrix-dashboard
status:
  loadBalancer: {}
