k8s/base/prometheus-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f /home/ec2-user/petclinic-microservices/k8s/docker-compose.yaml -o /home/ec2-user/petclinic-microservices/k8s/base
    kompose.image-pull-secret: regcred
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: prometheus-server
  name: prometheus-server
spec:
  ports:
    - name: "9091"
      port: 9091
      targetPort: 9090
  selector:
    io.kompose.service: prometheus-server
status:
  loadBalancer: {}
