k8s/base/vets-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f /home/ec2-user/petclinic-microservices/k8s/docker-compose.yaml -o /home/ec2-user/petclinic-microservices/k8s/base
    kompose.image-pull-secret: regcred
    kompose.service.expose: petclinic04.farukgunal.net
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: vets-service
  name: vets-service
spec:
  ports:
    - name: "8083"
      port: 8083
      targetPort: 8083
  selector:
    io.kompose.service: vets-service
status:
  loadBalancer: {}
