k8s/base/customers-service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kompose.cmd: kompose convert -f /home/ec2-user/petclinic-microservices/k8s/docker-compose.yaml -o /home/ec2-user/petclinic-microservices/k8s/base
    kompose.image-pull-secret: regcred
    kompose.service.expose: petclinic04.farukgunal.net
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: customers-service
  name: customers-service
  spec:
    rules:
    - host: petclinic.farukgunal.net
      http:
        paths:
        - backend:
            serviceName: customers-service
            servicePort: 8081
          path: /api/gateway(/|$)(.*)
          pathType: ImplementationSpecific
        - backend:
            serviceName: customers-service
            servicePort: 8081
          path: /api/customer(/|$)(.*)
          pathType: ImplementationSpecific
