k8s/base/vets-service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kompose.cmd: kompose convert -f /home/ec2-user/petclinic-microservices/k8s/docker-compose.yaml -o /home/ec2-user/petclinic-microservices/k8s/base
    kompose.image-pull-secret: regcred
    kompose.service.expose: petclinic04.farukgunal.net
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: vets-service
  name: vets-service
  spec:
    rules:
    - host: petclinic.clarusway.us
      http:
        paths:
        - backend:
            serviceName: vets-service
            servicePort: 8083
          path: /api/vet(/|$)(.*)
          pathType: ImplementationSpecific
