k8s/base/visits-service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kompose.cmd: kompose convert -f /home/ec2-user/petclinic-microservices/k8s/docker-compose.yaml -o /home/ec2-user/petclinic-microservices/k8s/base
    kompose.image-pull-secret: regcred
    kompose.service.expose: petclinic04.farukgunal.net
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: visits-service
  name: visits-service
  spec:
    rules:
    - host: petclinic.farukgunal.net
      http:
        paths:
        - backend:
            serviceName: visits-service
            servicePort: 8082
          path: /api/visit(/|$)(.*)
          pathType: ImplementationSpecific
